testdata/networking/ovn-egressfirewall/egressfirewall-policy2.yaml
kind: EgressFirewall
apiVersion: k8s.ovn.org/v1
metadata:
  name: default
spec:
  egress:
  - type: Deny
    to:
      cidrSelector: 0.0.0.0/0
  - type: Allow
    to:
      cidrSelector: 74.125.24.0/24
