testdata/networking/ovn-egressfirewall/limit_policy.json
{
    "kind": "EgressFirewall",
    "apiVersion": "k8s.ovn.org/v1",
    "metadata": {
        "name": "default"
    },
    "spec": {
        "egress": [
            {
                "type": "Deny",
                "to": {
                    "cidrSelector": "0.0.0.0/0"
                }
            }
        ]
    }
}
