testdata/networking/ovn-egressfirewall/limit_policy_dualstack.json
{
  "kind": "EgressFirewall",
  "apiVersion": "k8s.ovn.org/v1",
  "metadata": {
    "name": "default"
  },
  "spec": {
    "egress": [
      {
        "type": "Deny",
        "to": {
          "cidrSelector": "0.0.0.0/0"
        }
      },
      {
        "type": "Deny",
        "to": {
          "cidrSelector": "::/0"
        }
      }
    ]
  }
}
